--- a/cluster/staging/app1.yaml
+++ b/cluster/staging/app1.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: app1
   namespace: flux-system
 spec:
   interval: 10m0s
