--- a/apps/staging/audiobookshelf/cloudflare.yaml
+++ b/apps/staging/audiobookshelf/cloudflare.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloudflared
+  name: cloudflared-audiobookshelf
 spec:
   selector:
     matchLabels:
-      app: cloudflared
+      app: cloudflared-audiobookshelf
   replicas: 2 # You could also consider elastic scaling for this deployment
   template:
     metadata:
       labels:
-        app: cloudflared
+        app: cloudflared-audiobookshelf
     spec:
       containers:
-      - name: cloudflared
+      - name: cloudflared-audiobookshelf
         image: cloudflare/cloudflared:latest
         args:
         - tunnel
@@ -42,7 +42,7 @@ spec:
       # Create a config.yaml file from the ConfigMap below.
       - name: config
         configMap:
-          name: cloudflared
+          name: cloudflared-audiobookshelf
           items:
           - key: config.yaml
             path: config.yaml
@@ -51,7 +51,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: cloudflared
+  name: cloudflared-audiobookshelf
 data:
   config.yaml: |
     tunnel: audiobookshelf
