work: configmap file is updated

--- a/apps/base/myweather-app/frontend-deployment.yaml
+++ b/apps/base/myweather-app/frontend-deployment.yaml
@@ -30,4 +30,4 @@ spec:
 
       envFrom:
         - configMapRef:
-            name: myweather-app-frontend-configmap
+            name: frontend-configmap
