--- a/apps/base/myweather-app/kustomization.yaml
+++ b/apps/base/myweather-app/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - namespace.yaml
   - backend-deployment.yaml
   - backend-service.yaml
-  - configmap.yaml
+  - backend-configmap.yaml
   - frontend-deployment.yaml
   - frontend-service.yaml
+  - frontend-configmap.yaml
