work: myweather cloudflare file updated

--- a/apps/staging/myweather-app/ingress.yaml
+++ b/apps/staging/myweather-app/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-  - host: myweather-app.vijaiveerapandian.com
+  - host: myweather.vijaiveerapandian.com
     http:
       paths:
       - backend:
