--- a/apps/staging/myweather-app/cloudflare.yaml
+++ b/apps/staging/myweather-app/cloudflare.yaml
@@ -60,7 +60,7 @@ data:
     no-autoupdate: true
 
     ingress:
-    - hostname: myweather-app.vijaiveerapandian.com
+    - hostname: myweather.vijaiveerapandian.com
       service: http://myweather-app:9090
 
     - hostname: hello.example.com
