--- a/apps/staging/myweather-app/ingress.yaml
+++ b/apps/staging/myweather-app/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: myweather-app
+  name: myweather
 spec:
   ingressClassName: traefik
   rules:
@@ -10,7 +10,7 @@ spec:
       paths:
       - backend:
           service:
-            name: myweather-app
+            name: myweather
             port:
               number: 9090
         path: /
