--- a/apps/staging/myweather-app/backend-secret.yaml
+++ b/apps/staging/myweather-app/backend-secret.yaml
@@ -5,7 +5,7 @@ data:
 kind: Secret
 metadata:
     creationTimestamp: null
-    name: backend-secret-env
+    name: backend-secret
     namespace: myweather
 sops:
     age:
