--- a/apps/base/myweather-app/frontend-configmap.yaml
+++ b/apps/base/myweather-app/frontend-configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: frontend-configmap
-  namespace: myweather-app
+  namespace: myweather
 data:
-  PORT: "9090"
+  PORT: "80"
