--- a/apps/base/myweather-app/kustomization.yaml
+++ b/apps/base/myweather-app/kustomization.yaml
@@ -1,11 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: myweather-app
+namespace: myweather
 resources:
-  - namespace.yaml
   - backend-deployment.yaml
-  - backend-service.yaml
   - backend-configmap.yaml
+  - backend-service.yaml
   - frontend-deployment.yaml
-  - frontend-service.yaml
   - frontend-configmap.yaml
+  - frontend-service.yaml
