--- a/apps/base/audiobookshelf/storage.yaml
+++ b/apps/base/audiobookshelf/storage.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: audiobookshelf-audiobooks
+  namespace: audiobookshelf
 spec:
   storageClassName: local-path
   accessModes:
