--- a/apps/staging/audiobookshelf/cloudflare-secret.yaml
+++ b/apps/staging/audiobookshelf/cloudflare-secret.yaml
@@ -5,6 +5,7 @@ kind: Secret
 metadata:
     creationTimestamp: null
     name: tunnel-credentials
+    namespace: audiobookshelf
 sops:
     age:
         - recipient: age1mdd3zj2gmm4sw6h3l62dv00dp4y8uu628n6fxfax2ftmwqrdtcjq4pmwcn
