--- a/apps/staging/audiobookshelf/kustomization.yaml
+++ b/apps/staging/audiobookshelf/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: audiobookshelf
 resources:
   - ../../base/audiobookshelf/
+  - namespace.yaml 
   - cloudflare.yaml
   - cloudflare-secret.yaml
   - ingress.yaml
