--- a/apps/staging/myweather-app/kustomization.yaml
+++ b/apps/staging/myweather-app/kustomization.yaml
@@ -2,8 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: myweather
 resources:
+  - namespace.yaml
   - ../../base/myweather-app
   - cloudflare.yaml
   - cloudflare-secret.yaml
   - ingress.yaml
-  - namespace.yaml
+  - backend-secret.yaml
