work: myweather reworked

--- a/apps/staging/myweather-app/backend-secret.yaml
+++ b/apps/staging/myweather-app/backend-secret.yaml
@@ -1,9 +1,24 @@
 apiVersion: v1
 data:
-  GEMINI_API_KEY: QUl6YVN5Q2Z1TW96cTBUeWxpVXFtb1lkSnE2OC12ak1UUXdVT1pz
-  REACT_APP_RAPIDAPI_KEY: OWVlZTBmNmNlMW1zaDYyODg3NmEyNzMyMTk3ZXAxMTA2YzVqc25hOTlhMmZhZDZmMjg=
+    GEMINI_API_KEY: ENC[AES256_GCM,data:lLyhTqFFMZ2l80HMObyv6vqrRN23JHl//PyZzwlPFVJ9kKqqPUZ8wqqY7FEUYfebUnI/pA==,iv:U+M2RSbJKIibA9mRrwUHqGqcrPNc1jP0s1peGQcsbWY=,tag:CbQ4HxyOffuAOKxYlR5i/w==,type:str]
+    REACT_APP_RAPIDAPI_KEY: ENC[AES256_GCM,data:13jx5m/havRw3P5rdypNny6zBiOrWDO6/eFcNX0X6GatWyNHmg2KpJ3iV86FiSiPaPwOUicV4rwGerfJOaOEReUSoU0=,iv:zXJWpvKocx1pXj/WWTiSD3Wvx9ovZFWSl3YEzr4aMck=,tag:5MpnWwEYkG5AQymdvrt2nQ==,type:str]
 kind: Secret
 metadata:
-  creationTimestamp: null
-  name: backend-secret
-  namespace: myweather
+    creationTimestamp: null
+    name: backend-secret
+    namespace: myweather
+sops:
+    age:
+        - recipient: age1mdd3zj2gmm4sw6h3l62dv00dp4y8uu628n6fxfax2ftmwqrdtcjq4pmwcn
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPeGRYTjdjWkpQSUg1UXdv
+            WWFyVzE3UCtBelVBUkFTZm9uNGJqb0U5ZlZBCmxzMS95ekdRNWFFdkF4U3RCUUd1
+            VVVldUh4dnhQQmQycC84aWdZQVhDbjQKLS0tIDByTldNUUNXQitqTnVmbGR2M1Vu
+            Smh6N2lpS2ZwcDRyTWhKa083L0RUNjQK9u9t+ZWbgOtZKuHJyV/s2k5IvzXFP4WO
+            78bsYFqbXlTCb/X5C2gSFNd4C9/JPFt1TC1AIsk5j6cwr37ynK7jNA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-06-24T11:06:38Z"
+    mac: ENC[AES256_GCM,data:MPaNuCxDqnjHxFH1pk0Z38U3qEA9Wzj8wm7BXdR2FNeh/U6w91C9WABjhFexYb89OEIf3Nmu7UX2fvX4b2GkoJ0retP2TWVlH/ukixzOXbP+3GdlZs9D5t7/PfXm7DCPcAl1FRxjPygMnyzHcvw89z/YvZ3rhAJhNbLk6YdRJSM=,iv:+F4JwxCqgw0J8J/aMO/bXx/9aI+RBlv2XVKg0Dj3cQU=,tag:9HhCULmPTyHYjGGG7sjjgg==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    version: 3.10.2
