--- a/cluster/staging/app2.yaml
+++ b/cluster/staging/app2.yaml
@@ -13,3 +13,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+~                     
