--- a/cluster/staging/app2.yaml
+++ b/cluster/staging/app2.yaml
@@ -12,7 +12,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: kube-apps
   decryption:
     provider: sops
     secretRef:
